# bobeartoes-blog-code-samples

./: README.md
julia/: Manifest.toml  Project.toml  README.md
julia/notebooks/: vegalite_examples.ipynb
julia/notebooks/eye_balling_it/: eye_balling_distributions.ipynb
julia/notebooks/eye_balling_it/outputs/: normalized-combined-1000.html
python/: README.md  pyproject.toml
python/notebooks/: color_schemes.ipynb  idiomatic_pandas.ipynb  ks_test.ipynb  plot.json  why_vega_is_mega.ipynb
